# yt-insight-generator

./: .gitignore  LICENSE.md  README.md  pyproject.toml  yt_insight_generator.py
templates/: ai-message.txt
